# agent-fix

./: .env.example  .gitignore  .mcp.json  AGENTS.md  QUICK_START.md  README.md  TODO.md  cli.py  config-template.yaml  install.sh  main.py  pyproject.toml
.claude-plugin/: plugin.json
.codex/: config.toml
_legacy/: cli.py  orchestrator.py  workflow.py
agents/: analyze.md  extract.md  fix-one-issue.md  implement.md  test.md
agents/issue-fix/: AGENTS.md
batch_runner/: driver.py
commands/: batch-issues.md  fix-one-issue.md  setup-project.md
docs/: ARCHITECTURE.md  CLI_USAGE.md  brainstorm.md  cli-usage.md  knowledge.md  research.md  todo.md
engine/: __init__.py  agent_runner.py  config.py  harness_rules.yaml  mcp_client.py  orchestrator.py  project_spec.py  skill_loader.py  tools.py  workflow.py
engine/adapters/: __init__.py  base.py  claude_adapter.py  copilot_adapter.py  harness.py  openai_adapter.py
engine/behavior_validation/: __init__.py  dev_server.py  executor.py  playwright_runner.py  scenarios.py
engine/issue_source/: __init__.py  attachment_utils.py  base.py  claude_adapter.py  google_sheets.py  jira.py  local_json.py  openai_adapter.py
examples/: minimal-nextjs.yaml  morse-webapp.yaml  turborepo-nextjs.yaml
issues/: README.md  TEMPLATE.json  TEMPLATE.md
mcp_servers/agent_fix_tools/: server.py
projects/minimal-nextjs/: config.yaml
projects/turborepo-nextjs/: config.yaml
schemas/: README.md  sheets_template.csv
skills/bugfix-analyze/: SKILL.md
skills/bugfix-analyze/assets/: ux-guidelines.ATTRIBUTION
skills/bugfix-analyze/references/: browser-efficiency.md  browser-reproduction.md  external-contract.md  ux-evaluation.md
skills/bugfix-implement/: SKILL.md
skills/bugfix-test/: SKILL.md
skills/issue-extract/: SKILL.md
skills/project-init/: SKILL.md
skills/references/: README.md  auth-flow.md  browser-efficiency.md  browser-reproduction.md  upload-flow.md
skills/references/auth-flow/: SKILL.md
skills/references/upload-flow/: SKILL.md
