[project]
name = "agent-fix"
version = "4.0.0"
description = "Claude Code plugin for automated bug fixing: extract → analyze → implement → test"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Agent Fix Contributors"}
]

dependencies = [
    "pydantic>=2.12.5",        # config.py — YAML 配置驗證
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "playwright>=1.40.0",      # behavior_validation — Playwright E2E
    "mcp>=1.0.0",              # MCP server (FastMCP)
]

[project.optional-dependencies]
# Issue source 擴充
sheets = ["gspread>=6.0.0"]

dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
agent-fix = "batch_runner.driver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "batch_runner", "mcp_servers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=engine --cov-report=term-missing"

[tool.coverage.run]
source = ["engine"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
